--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,25 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+
+/* -------- TASK 3 ----------*/
+
+.gallery {
+  display: flex;
+  flex-wrap: nowrap;
+
+  list-style: none;
+
+  padding: 0;
+  margin: 0;
+}
+
+.gallery-item {
+  margin: 0.5em;
+}
+
+.gallery-item img {
+  width: 100%;
+  height: auto;
+}
