--- a/css/common.css
+++ b/css/common.css
@@ -44,3 +44,15 @@ button {
   width: 100%;
   height: auto;
 }
+
+
+/* -------- TASK 10 ----------*/
+
+
+#boxes {
+
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding-top: 10px;
+}
